--- a/web/src/main/webapp/css/screen.css
+++ b/web/src/main/webapp/css/screen.css
@@ -1168,8 +1168,8 @@
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
-  background: transparent url(../images/logo_small.png) no-repeat left center;
-  padding: 20px 0 20px 40px;
+  background: transparent url(../images/logo_oeg_small.png) no-repeat left center;
+  padding: 20px 0 20px 80px;
   color: white;
 }
 .swagger-section #header form#api_selector {
